# cursor-guest

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: main.js  style.css
src-tauri/: Cargo.toml  build.rs  manifest.xml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  main.rs  models.rs  process.rs  registry.rs  utils.rs
